--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#E74C3C</color>
     <color name="colorPrimaryDark">#E73827</color>
     <color name="colorAccent">#5691C8</color>
+    <color name="white">#D3D0D0</color>
 </resources>
