--- a/app/src/main/res/layout/folder_creation_dialog.xml
+++ b/app/src/main/res/layout/folder_creation_dialog.xml
@@ -6,10 +6,11 @@
     android:orientation="vertical"
     android:paddingHorizontal="24dp"
     android:paddingVertical="16dp"
-    android:theme="@style/DialogTheme">
+    android:theme="@style/LightTheme.Dialog">
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/ti_layout"
+        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:boxBackgroundColor="@android:color/transparent"
