--- a/app/src/main/res/layout/activity_recorder.xml
+++ b/app/src/main/res/layout/activity_recorder.xml
@@ -7,7 +7,7 @@
     tools:context=".ui.recorder.RecorderActivity">
 
     <fragment
-        android:id="@+id/host_fragment"
+        android:id="@+id/host_recorder"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
