--- a/app/src/main/res/layout/lecture_config_fragment.xml
+++ b/app/src/main/res/layout/lecture_config_fragment.xml
@@ -12,25 +12,25 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:src="@drawable/image"
-        app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintBottom_toTopOf="@id/line_top"
+        app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1" />
 
     <TextView
-            android:id="@+id/tv_info"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:gravity="center"
-            android:text="@string/info_lecture_configuration"
-            android:textSize="16sp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="@id/line_top"/>
+        android:id="@+id/tv_info"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:text="@string/info_lecture_configuration"
+        android:textSize="16sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@id/line_top" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_cancel"
@@ -69,17 +69,15 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/ti_layout_lecture"
         style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
-        android:layout_marginEnd="28dp"
         app:boxBackgroundColor="@android:color/transparent"
         app:errorEnabled="true"
-        app:layout_constraintVertical_bias="1"
-        app:layout_constraintTop_toBottomOf="@id/tv_info"
         app:layout_constraintBottom_toTopOf="@id/ti_layout_folder"
-        app:layout_constraintLeft_toLeftOf="@id/ti_layout_folder"
-        app:layout_constraintRight_toRightOf="@id/ti_layout_folder">
+        app:layout_constraintLeft_toLeftOf="@id/checkbox_download"
+        app:layout_constraintRight_toRightOf="@id/checkbox_download"
+        app:layout_constraintTop_toBottomOf="@id/tv_info"
+        app:layout_constraintVertical_bias="1">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/ti_lecture_name"
@@ -91,15 +89,13 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/ti_layout_folder"
         style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
-        android:layout_marginEnd="28dp"
         app:boxBackgroundColor="@android:color/transparent"
         app:errorEnabled="true"
         app:layout_constraintBottom_toTopOf="@id/checkbox_download"
         app:layout_constraintLeft_toLeftOf="@id/checkbox_download"
-        app:layout_constraintRight_toRightOf="@id/checkbox_download">
+        app:layout_constraintRight_toLeftOf="@+id/image_btn_choose_folder">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/ti_folder_name"
@@ -107,6 +103,16 @@
             android:layout_height="match_parent"
             android:hint="@string/hint_folder" />
     </com.google.android.material.textfield.TextInputLayout>
+
+    <ImageButton
+        android:id="@+id/image_btn_choose_folder"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:src="@drawable/image_folder_choose"
+        app:layout_constraintBottom_toBottomOf="@+id/ti_layout_folder"
+        app:layout_constraintEnd_toEndOf="@+id/ti_layout_lecture"
+        app:layout_constraintTop_toTopOf="@id/ti_layout_folder" />
 
     <CheckBox
         android:id="@+id/checkbox_download"
