--- a/app/src/main/res/navigation/record_graph.xml
+++ b/app/src/main/res/navigation/record_graph.xml
@@ -16,16 +16,25 @@
             app:launchSingleTop="true"
             app:popUpTo="@+id/lectureConfigFragment"
             app:popUpToInclusive="true" />
-        <argument
-            android:name="Lecture"
-            app:argType="com.itis2019.lecturerecorder.model.Lecture" />
-        <argument
-            android:name="Marks"
-            app:argType="com.itis2019.lecturerecorder.model.Mark[]" />
     </fragment>
     <fragment
         android:id="@+id/lectureConfigFragment"
         android:name="com.itis2019.lecturerecorder.ui.recorder.lectureConfig.LectureConfigFragment"
         android:label="lecture_config_fragment"
-        tools:layout="@layout/lecture_config_fragment" />
+        tools:layout="@layout/lecture_config_fragment">
+        <argument
+            android:name="lecture"
+            app:argType="com.itis2019.lecturerecorder.entities.Lecture" />
+        <action
+            android:id="@+id/action_lectureConfigFragment_to_mainActivity"
+            app:destination="@id/mainActivity" />
+        <argument
+            android:name="marks"
+            app:argType="com.itis2019.lecturerecorder.entities.Mark[]" />
+    </fragment>
+    <activity
+        android:id="@+id/mainActivity"
+        android:name="com.itis2019.lecturerecorder.ui.MainActivity"
+        android:label="activity_main"
+        tools:layout="@layout/activity_main" />
 </navigation>
