--- a/app/src/main/res/layout/activity_folder_info.xml
+++ b/app/src/main/res/layout/activity_folder_info.xml
@@ -12,8 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="20dp"
-        android:scrollbars="vertical"
-        android:theme="@style/LectureItem">
+        android:scrollbars="vertical">
 
     </androidx.recyclerview.widget.RecyclerView>
 
