--- a/app/src/main/res/layout/folder_creation_dialog.xml
+++ b/app/src/main/res/layout/folder_creation_dialog.xml
@@ -4,8 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingHorizontal="24dp"
-    android:paddingVertical="16dp"
+    android:padding="16dp"
     android:theme="@style/LightTheme.Dialog">
 
     <com.google.android.material.textfield.TextInputLayout
@@ -22,11 +21,5 @@
             android:layout_height="match_parent"
             android:hint="@string/subject_name" />
     </com.google.android.material.textfield.TextInputLayout>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Choose color:"
-        android:textColor="@android:color/darker_gray" />
 
 </LinearLayout>
