--- a/app/src/main/res/layout/item_folder.xml
+++ b/app/src/main/res/layout/item_folder.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginHorizontal="8dp"
-    android:layout_marginVertical="8dp"
+    android:layout_margin="8dp"
     android:background="@drawable/gradient_yellow"
     app:cardCornerRadius="16dp"
     app:cardElevation="8dp">
@@ -23,6 +22,10 @@
             android:fontFamily="@font/roboto_bold"
             android:gravity="center"
             android:maxLines="2"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:textColor="@android:color/white"
             android:textSize="20sp"
             android:textStyle="bold"
