--- a/app/src/main/res/layout/recording_fragment.xml
+++ b/app/src/main/res/layout/recording_fragment.xml
@@ -6,10 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".ui.recorder.recording.RecordingFragment">
 
+
     <android.opengl.GLSurfaceView
         android:id="@+id/visualizer"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_margin="16dp"
         app:layout_constraintBottom_toTopOf="@id/tv_chronometer"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -63,7 +65,8 @@
         android:id="@+id/btn_mark"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginStart="16dp"
         android:background="@drawable/gradient_red"
         android:src="@drawable/ic_flag_black_24dp"
         app:backgroundTint="@color/colorPrimary"
@@ -78,17 +81,14 @@
 
     <com.ohoussein.playpause.PlayPauseView
         android:id="@+id/btn_play_pause"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_marginLeft="44dp"
-        android:layout_marginRight="44dp"
-        android:layout_marginBottom="8dp"
-        android:clickable="true"
-        android:focusable="true"
+        android:layout_marginBottom="16dp"
         android:foreground="?android:selectableItemBackground"
         app:fill_color="#ffffff"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintLeft_toRightOf="@id/btn_mark"
         app:layout_constraintRight_toLeftOf="@id/btn_stop"
         app:layout_constraintTop_toTopOf="@id/line_bottom"
@@ -99,7 +99,8 @@
         android:id="@+id/btn_stop"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="16dp"
         android:src="@drawable/ic_stop_white_24dp"
         app:backgroundTint="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
