--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,16 +1,16 @@
 <resources>
 
-    <style name="LightTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
+    <style name="LectureRecorderTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
         <item name="android:textColor">@android:color/black</item>
         <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@android:color/white</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:alertDialogTheme">@style/LightTheme.Dialog</item>
         <item name="colorBackgroundFloating">@color/colorPrimary</item>
         <item name="android:windowLightStatusBar">true</item>
     </style>
 
-    <style name="LightTheme.Launcher">
+    <style name="LectureRecorderTheme.Launcher">
         <item name="android:windowBackground">@drawable/launch_screen</item>
         <item name="android:windowTranslucentStatus">true</item>
     </style>
@@ -18,7 +18,7 @@
     <style name="LightTheme.Dialog" parent="Theme.AppCompat.Light.Dialog.Alert">
         <item name="materialButtonStyle">@style/Widget.MaterialComponents.Button.TextButton</item>
         <item name="dialogCornerRadius">12dp</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorAccent">@color/colorPrimary</item>
         <item name="colorPrimary">@color/colorAccent</item>
     </style>
 
@@ -35,14 +35,5 @@
         <item name="android:textColor">@android:color/white</item>
         <item name="android:gravity">start</item>
     </style>
-
-    <style name="LightTheme.NoActionBar">
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
-    </style>
-
-    <style name="LightTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
-
-    <style name="LightTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
 </resources>
