--- a/app/src/main/res/drawable/gradient_blue.xml
+++ b/app/src/main/res/drawable/gradient_blue.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:endColor="#5691c8"
-        android:startColor="#457fca"
-        android:angle="0" />
+        android:angle="0"
+        android:endColor="#3CD3AD"
+        android:startColor="#4CB8C4" />
 </shape>
 
