--- a/app/src/main/res/drawable/gradient_purple.xml
+++ b/app/src/main/res/drawable/gradient_purple.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
     <gradient
         android:angle="0"
-        android:endColor="#EEAD92"
-        android:startColor="#6018DC" />
+        android:endColor="#ad5389"
+        android:startColor="#3c1053" />
 </shape>
 
