--- a/app/src/main/res/layout/fragment_listening.xml
+++ b/app/src/main/res/layout/fragment_listening.xml
@@ -4,7 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.listener.ListeningActivity">
+    tools:context=".ui.listener.ListeningFragment">
+
+    <com.gauravk.audiovisualizer.visualizer.BarVisualizer xmlns:custom="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/blast"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@id/tv_mark_title"
+        app:layout_constraintTop_toTopOf="parent"
+        custom:avColor="@color/colorPrimary"
+        custom:avSpeed="fast"
+        custom:avType="outline"
+        custom:layout_constraintEnd_toEndOf="parent"
+        custom:layout_constraintStart_toStartOf="parent" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/line_center"
@@ -17,8 +29,7 @@
         android:id="@+id/tv_mark_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="28dp"
-        android:layout_marginRight="28dp"
+        android:layout_marginStart="16dp"
         android:fontFamily="@font/roboto_regular"
         android:text="@string/marks"
         android:textSize="24sp"
@@ -28,17 +39,17 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_marks"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginLeft="28dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginRight="28dp"
-        android:layout_marginBottom="28dp"
+        android:clipToPadding="false"
+        android:padding="8dp"
+        android:scrollbarStyle="outsideOverlay"
+        android:scrollbars="vertical"
         app:layout_constraintBottom_toTopOf="@id/line_bottom"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_mark_title"
-        app:layout_constraintVertical_bias="0">
-
-    </androidx.recyclerview.widget.RecyclerView>
+        app:layout_constraintVertical_bias="0" />
 
     <SeekBar
         android:id="@+id/seek_bar"
@@ -50,24 +61,20 @@
         app:layout_constraintTop_toBottomOf="@id/rv_marks"
         app:layout_constraintVertical_bias="0.45" />
 
-    <com.ohoussein.playpause.PlayPauseView
+    <ImageView
         android:id="@+id/btn_play_pause"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginLeft="44dp"
-        android:layout_marginRight="44dp"
-        android:layout_marginBottom="8dp"
-        android:clickable="true"
-        android:focusable="true"
-        android:foreground="?android:selectableItemBackground"
-        app:fill_color="#ffffff"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="16dp"
+        android:src="@drawable/ic_play_24dp"
+        android:tint="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@id/line_bottom"
-        app:pause_bg="@color/colorPrimary"
-        app:play_bg="@color/colorPrimary" />
+        app:layout_constraintTop_toTopOf="@id/line_bottom" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/line_bottom"
