--- a/app/src/main/res/layout/fragment_recording.xml
+++ b/app/src/main/res/layout/fragment_recording.xml
@@ -6,13 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".ui.recorder.recording.RecordingFragment">
 
-
     <android.opengl.GLSurfaceView
         android:id="@+id/visualizer"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_margin="16dp"
         app:layout_constraintBottom_toTopOf="@id/tv_chronometer"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -39,8 +39,7 @@
         android:id="@+id/tv_mark_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="28dp"
-        android:layout_marginRight="28dp"
+        android:layout_marginStart="16dp"
         android:fontFamily="@font/roboto_regular"
         android:text="@string/marks"
         android:textSize="24sp"
@@ -50,66 +49,63 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_marks"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginLeft="28dp"
-        android:layout_marginRight="28dp"
+        android:clipToPadding="false"
+        android:descendantFocusability="blocksDescendants"
+        android:padding="8dp"
+        android:scrollbarStyle="outsideOverlay"
+        android:scrollbars="vertical"
         app:layout_constraintBottom_toTopOf="@id/line_bottom"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_mark_title"
-        app:layout_constraintVertical_bias="0">
-
-    </androidx.recyclerview.widget.RecyclerView>
+        app:layout_constraintVertical_bias="0" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btn_mark"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginStart="16dp"
         android:background="@drawable/gradient_red"
-        android:src="@drawable/ic_flag_black_24dp"
+        android:layout_marginEnd="8dp"
+        android:src="@drawable/ic_flag_24dp"
         app:backgroundTint="@color/colorPrimary"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/btn_play_pause"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@id/btn_play_pause"
-        app:layout_constraintTop_toTopOf="@id/line_bottom"
-        app:maxImageSize="30dp"
+        app:layout_constraintTop_toTopOf="@id/btn_play_pause"
         app:tint="@android:color/white" />
 
-    <com.ohoussein.playpause.PlayPauseView
+    <ImageView
         android:id="@+id/btn_play_pause"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
-        android:foreground="?android:selectableItemBackground"
-        app:fill_color="#ffffff"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
+        android:src="@drawable/ic_play_24dp"
+        android:tint="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintLeft_toRightOf="@id/btn_mark"
         app:layout_constraintRight_toLeftOf="@id/btn_stop"
-        app:layout_constraintTop_toTopOf="@id/line_bottom"
-        app:pause_bg="@color/colorPrimary"
-        app:play_bg="@color/colorPrimary" />
+        app:layout_constraintTop_toTopOf="@id/line_bottom" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btn_stop"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
+        android:layout_marginStart="8dp"
         android:layout_marginEnd="16dp"
-        android:src="@drawable/ic_stop_white_24dp"
+        android:src="@drawable/ic_stop_24dp"
         app:backgroundTint="@color/colorPrimary"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/btn_play_pause"
         app:layout_constraintDimensionRatio="1:1"
-        app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintLeft_toRightOf="@id/btn_play_pause"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@id/line_bottom"
-        app:maxImageSize="30dp"
+        app:layout_constraintTop_toTopOf="@id/btn_play_pause"
         app:tint="@android:color/white" />
 
     <androidx.constraintlayout.widget.Guideline
