--- a/app/src/main/res/layout/item_header.xml
+++ b/app/src/main/res/layout/item_header.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_margin="8dp"
     android:layout_height="wrap_content">
@@ -15,10 +16,10 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:fontFamily="@font/roboto_black"
-        android:text="@string/settings"
         android:layout_marginBottom="8dp"
         android:textAllCaps="true"
-        android:textColor="@android:color/black"
+        android:textColor="#373737"
+        tools:text="@string/settings"
         android:textSize="32sp" />
 
     <TextView
@@ -28,9 +29,10 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_title"
         android:layout_width="0dp"
+        android:textColor="#373737"
+        tools:text="Subtitle"
         android:layout_height="wrap_content"
         android:fontFamily="@font/roboto_regular"
-        android:textColor="@android:color/black"
         android:textSize="28sp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
 
