--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -3,11 +3,12 @@
 
     <item
         android:id="@+id/navigation_lectures"
-        android:icon="@drawable/ic_record_voice_over_black_24dp" />
+        android:icon="@drawable/ic_record_voice_over"
+        android:title="@string/title_records" />
 
     <item
         android:id="@+id/navigation_folders"
-        android:icon="@drawable/ic_folder_black_24dp"
+        android:icon="@drawable/ic_folder_24dp"
         android:title="@string/title_folders" />
 
     <item
