--- a/app/src/main/res/layout/dialog_rename.xml
+++ b/app/src/main/res/layout/dialog_rename.xml
@@ -18,8 +18,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/ti_mark_name"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:hint="@string/hint_mark_name" />
+            android:layout_height="match_parent" />
     </com.google.android.material.textfield.TextInputLayout>
 
 </LinearLayout>
