--- a/app/src/main/res/layout/fragment_listening.xml
+++ b/app/src/main/res/layout/fragment_listening.xml
@@ -6,12 +6,25 @@
     android:layout_height="match_parent"
     tools:context=".ui.listener.ListeningFragment">
 
+    <TextView
+        android:id="@+id/tv_record_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal|center_vertical"
+        android:lines="2"
+        android:text="@string/now_playing_record_name"
+        android:textColor="@color/colorText"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/blast"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <com.gauravk.audiovisualizer.visualizer.BarVisualizer xmlns:custom="http://schemas.android.com/apk/res-auto"
         android:id="@+id/blast"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        custom:layout_constraintTop_toBottomOf="@id/tv_record_name"
         app:layout_constraintBottom_toTopOf="@id/tv_mark_title"
-        app:layout_constraintTop_toTopOf="parent"
         custom:avColor="@color/colorPrimary"
         custom:avSpeed="fast"
         custom:avType="outline"
