--- a/app/src/main/res/layout/item_record.xml
+++ b/app/src/main/res/layout/item_record.xml
@@ -5,6 +5,7 @@
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
     android:theme="@style/RecordItem"
+    app:cardElevation="0dp"
     app:cardCornerRadius="16dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
